--- a/Tmux/dot.tmux.conf
+++ b/Tmux/dot.tmux.conf
@@ -52,24 +52,34 @@ set-window-option -g monitor-activity on
 ## KEY BINDINGS
 ##
 
-bind R source-file ~/.tmux.conf \; display-message "Configuration reloaded..."
+bind R source-file ~/.tmux.conf \; display-message "Configuration reloaded."
 
 bind-key - split-window -v
 bind-key _ split-window -v
 bind-key | split-window -h
+
+# Vi keys (uppercase) to resize.
 bind-key -r < resize-pane -L 3
+bind-key -r H resize-pane -L 3
+
 bind-key -r > resize-pane -R 3
+bind-key -r L resize-pane -R 3
+
 bind-key -r + resize-pane -U 1
+bind-key -r K resize-pane -U 1
+
 bind-key -r = resize-pane -D 1
+bind-key -r J resize-pane -D 1
 
 ## Prefix-{Tab, Enter} switches to last used {pane, window}
 bind -r Tab last-pane
 bind -r Enter last-window
 
-bind k selectp -U # switch to panel Up
-bind j selectp -D # switch to panel Down
-bind h selectp -L # switch to panel Left
-bind l selectp -R # switch to panel Right
+# Vi keys to focus panels.
+bind k selectp -U
+bind j selectp -D
+bind h selectp -L
+bind l selectp -R
 
 
 ##
@@ -91,3 +101,4 @@ bind-key -T copy-mode-vi y send-keys -X copy-selection
 # as that prints junk characters to the terminal when copying.
 #set-option -s set-clipboard off
 set -g set-clipboard off
+
