Remove color from Tmux status bars

--- a/Tmux/dot.tmux.conf
+++ b/Tmux/dot.tmux.conf
@@ -11,7 +11,7 @@ set -g mode-keys vi
 ## THEME
 ##
 
-set -g default-terminal "screen-256color"
+#set -g default-terminal "screen-256color"
 
 ## Display Git ID (right), to avoid commit schizophrenia and Tmux session name.
 set -g status-right '#(git config -l | grep user.email | cut -d "=" -f 2| cut -d "@" -f 1)::#S'
@@ -21,7 +21,7 @@ set-option -g status-bg black
 set-option -g status-fg default
 set-option -g status-attr dim
 
-set-window-option -g window-status-fg brightblue
+# set-window-option -g window-status-fg brightblue
 set-window-option -g window-status-bg default
 
 # set-window-option -g window-status-current-fg default
@@ -38,7 +38,7 @@ set-option -g pane-active-border-fg black
 set-option -g message-bg black
 set-option -g message-fg default
 
-set-option -g display-panes-active-colour blue
+# set-option -g display-panes-active-colour blue
 set-option -g display-panes-colour brightred
 
 ## Display visible indicator of each pane
