--- a/Sakura/sakura.conf
+++ b/Sakura/sakura.conf
@@ -1,6 +1,6 @@
 [sakura]
-colorset1_fore=rgb(131, 148, 150)
-colorset1_back=rgb(0, 43, 54)
+colorset1_fore=rgb(131,148,150)
+colorset1_back=rgb(0,43,54)
 colorset1_curs=rgb(255,255,255)
 colorset1_key=F1
 colorset2_fore=rgb(192,192,192)
@@ -25,7 +25,7 @@ colorset6_curs=rgb(255,255,255)
 colorset6_key=F6
 last_colorset=1
 scroll_lines=4096
-font=Go Mono 13
+font=Go Mono 9
 show_always_first_tab=No
 scrollbar=false
 closebutton=true
@@ -41,7 +41,7 @@ stop_tab_cycling_at_end_tabs=No
 allow_bold=No
 cursor_type=VTE_CURSOR_SHAPE_BLOCK
 word_chars=-,./?%&#_~:
-palette=solarized_dark
+palette=solarized_light
 add_tab_accelerator=5
 del_tab_accelerator=5
 switch_tab_accelerator=8
